light/dark mode switch improvements and bugfix in search index (#29)
* Display link to source code repo as image if params.source.iconLight is specified
dont use hardcoded "images/" prefix in params.logo.lightMode and .darkMode

* don't use javascript template string in search index because it causes a js ReferenceError if a page contains something like ${variableWhichDoesntExistInJs}

* fix bug where light/dark mode switch isn't in the right position when the user loads the site the first time with preferred dark mode
add a sun icon on the switch in light mode and a moon icon in dark mode (icons are drawn by me so no copyright issues)

--- a/assets/sass/_variables.sass
+++ b/assets/sass/_variables.sass
@@ -32,6 +32,8 @@ html
       &_choice
         &::after
           transform: translateX(1.75rem) scale(1.67)
+      &_icon
+        transform: translateX(1.75rem) translateY(-50%)
 
   &.dark:not([data-mode="light"])
     @media (prefers-color-scheme: dark)
